--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     <div class="navigation-mobile container closed">
-      <img
-        class="altus-logo-small"
-        src="./assets/images/shared/Altus-Grey-Work-Logo.png"
-        alt="Altus"
-      />
+      <a href="./index.html">
+        <img
+          class="altus-logo-small"
+          src="./assets/images/shared/Altus-Grey-Work-Logo.png"
+          alt="Altus"
+        />
+      </a>
       <div class="menu-btn">
         <h1>MENU</h1>
         <div class="hamburger">
@@ -37,12 +39,14 @@
             <a href="./talent.html">TALENT</a>
             <a href="./employers.html">EMPLOYERS</a>
           </div>
-          <img
-            class="altus-logo"
-            src="./assets/images/shared/Altus-Logo-2020-WHITE-01.png"
-            alt="Altus Logo"
-            loading="lazy"
-          />
+          <a href="./index.html">
+            <img
+              class="altus-logo"
+              src="./assets/images/shared/Altus-Logo-2020-WHITE-01.png"
+              alt="Altus Logo"
+              loading="lazy"
+            />
+          </a>
         </div>
         <div class="main-view">
           <div class="side-text">
