Made all of the footer links owkr

--- a/employers.html
+++ b/employers.html
@@ -212,29 +212,32 @@
           alt="Altus Logo"
         />
         <div class="footer-links">
-          <a href="#">TALENT</a>
-          <a href="#">EMPLOYERS</a>
-          <a href="#">COMPANY</a>
+          <a href="./talent.html">TALENT</a>
+          <a href="./employers.html">EMPLOYERS</a>
+          <a href="./company.html">COMPANY</a>
         </div>
       </div>
       <div class="footer-bottom">
         <div class="social-links">
-          <a href="#">
+          <a target="_blank" href="https://www.linkedin.com/company/altus-jobs">
             <img
               src="./assets/images/shared/Linked-In-Icon.png"
               alt="LinkedIn logo"
             />
           </a>
-          <a href="#">
+          <a
+            target="_blank"
+            href="https://www.facebook.com/Altus-Jobs-LLC-112499672171936/"
+          >
             <img src="./assets/images/shared/FB-Logo.png" alt="Facebook logo" />
           </a>
-          <a href="#">
+          <a target="_blank" href="https://twitter.com/altusjobs">
             <img
               src="./assets/images/shared/Twitter-Icon.png"
               alt="Twitter logo"
             />
           </a>
-          <a href="#">
+          <a target="_blank" href="https://www.instagram.com/altusglobal/">
             <img
               src="./assets/images/shared/Insta-Icon.png"
               alt="Instagram logo"
