Added modal for talent and employers page

--- a/talent.html
+++ b/talent.html
@@ -128,6 +128,93 @@
       <span class="footer-bg-img1"></span>
       <span class="footer-bg-img2"></span>
     </div>
+    <div class="modal hidden">
+      <h2>REQUEST INFORMATION</h2>
+      <hr />
+      <form class="information-form" action="" method="POST">
+        <div class="company-input-wrapper">
+          <label for="company">COMPANY</label>
+          <input id="company" name="company" type="text" required />
+        </div>
+        <div class="city-input-wrapper">
+          <label for="city">CITY</label>
+          <input id="city" name="city" type="text" required />
+        </div>
+        <div class="state-input-wrapper">
+          <label for="state">STATE</label>
+          <select id="state" name="state" required>
+            <option selected disabled value="">Select State</option>
+            <option value="Alabama">Alabama</option>
+            <option value="Alaska">Alaska</option>
+            <option value="Arizona">Arizona</option>
+            <option value="Arkansas">Arkansas</option>
+            <option value="California">California</option>
+            <option value="Colorado">Colorado</option>
+            <option value="Connecticut">Connecticut</option>
+            <option value="Delaware">Delaware</option>
+            <option value="Florida">Florida</option>
+            <option value="Georgia">Georgia</option>
+            <option value="Hawaii">Hawaii</option>
+            <option value="Idaho">Idaho</option>
+            <option value="Illinois">Illinois</option>
+            <option value="Indiana">Indiana</option>
+            <option value="Iowa">Iowa</option>
+            <option value="Kansas">Kansas</option>
+            <option value="Kentucky">Kentucky</option>
+            <option value="Louisiana">Louisiana</option>
+            <option value="Maine">Maine</option>
+            <option value="Maryland">Maryland</option>
+            <option value="Massachusetts">Massachusetts</option>
+            <option value="Michigan">Michigan</option>
+            <option value="Minnesota">Minnesota</option>
+            <option value="Mississippi">Mississippi</option>
+            <option value="Missouri">Missouri</option>
+            <option value="Montana">Montana</option>
+            <option value="Nebraska">Nebraska</option>
+            <option value="Nevada">Nevada</option>
+            <option value="New Hampshire">New Hampshire</option>
+            <option value="New Jersey">New Jersey</option>
+            <option value="New Mexico">New Mexico</option>
+            <option value="New York">New York</option>
+            <option value="North Carolina">North Carolina</option>
+            <option value="North Dakota">North Dakota</option>
+            <option value="Ohio">Ohio</option>
+            <option value="Oklahoma">Oklahoma</option>
+            <option value="Oregon">Oregon</option>
+            <option value="Pennsylvania">Pennsylvania</option>
+            <option value="Rhode Island">Rhode Island</option>
+            <option value="South Carolina"> South Carolina</option>
+            <option value="South Dakota"> South Dakota</option>
+            <option value="Tennessee">Tennessee</option>
+            <option value="Texas">Texas</option>
+            <option value="Utah">Utah</option>
+            <option value="Vermont">Vermont</option>
+            <option value="Virginia">Virginia</option>
+            <option value="Washington">Washington</option>
+            <option value="West Virginia">West Virginia</option>
+            <option value="Wisconsin">Wisconsin</option>
+            <option value="Wyoming">Wyoming</option>
+          </select>
+        </div>
+        <div class="fname-input-wrapper">
+          <label for="fname">FIRST NAME</label>
+          <input id="fname" name="fname" type="text" required />
+        </div>
+        <div class="lname-input-wrapper">
+          <label for="lname">LAST NAME</label>
+          <input id="lname" name="lname" type="text" required />
+        </div>
+        <div class="email-input-wrapper">
+          <label for="email">EMAIL</label>
+          <input it="email" name="email" type="email" required />
+        </div>
+        <div class="title-input-wrapper">
+          <label for="title">TITLE</label>
+          <input id="title" name="title" type="text" required />
+        </div>
+        <input class="submit-btn" type="submit" value="SUBMIT" />
+      </form>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
