Changed c to tm

--- a/company.html
+++ b/company.html
@@ -355,7 +355,7 @@
         </div>
 
         <p class="footer-copyright">
-          &copy; 2020 Altus, LLC. All Rights Reserved
+          2020 Altus&trade;, LLC. All Rights Reserved
         </p>
       </div>
       <span class="footer-bg-img1"></span>
