Added animation for location images at the bottom of the company page

--- a/company.html
+++ b/company.html
@@ -82,7 +82,7 @@
           <div class="container">
             <div class="section-footer-heading">
               <img
-                class="location-image"
+                class="location-image location-first"
                 src="./assets/images/company/SanDiego-Icon.png"
               />
               <div class="location-info">
@@ -98,7 +98,7 @@
             </div>
             <div class="section-footer-heading">
               <img
-                class="location-image"
+                class="location-image location-second"
                 src="./assets/images/company/Orlando-Icon.png"
               />
               <div class="location-info">
