--- a/talent.html
+++ b/talent.html
@@ -1,227 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Altus Jobs</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/talent.css" />
-  </head>
-  <body>
-    <div class="navigation-mobile container closed">
-      <a href="./index.html">
-        <img
-          class="altus-logo-small"
-          src="./assets/images/shared/Altus-Grey-Work-Logo.png"
-          alt="Altus"
-        />
-      </a>
-      <div class="menu-btn">
-        <h1>MENU</h1>
-        <div class="hamburger">
-          <div class="hamburger-line"></div>
-          <div class="hamburger-line"></div>
-          <div class="hamburger-line"></div>
-        </div>
-      </div>
-      <div class="menu container">
-        <a href="./talent.html">Talent</a>
-        <a href="./employers.html">Employers</a>
-        <a href="./company.html">Company</a>
-        <a href="./company.html#leadership-section">Team</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Altus Jobs</title>
+  <link rel="shortcut icon" href="./assets/images/shared/Altus-Favicon.png" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/talent.css" />
+</head>
+
+<body>
+  <div class="navigation-mobile container closed">
+    <a href="./index.html">
+      <img class="altus-logo-small" src="./assets/images/shared/Altus-Grey-Work-Logo.png" alt="Altus" />
+    </a>
+    <div class="menu-btn">
+      <h1>MENU</h1>
+      <div class="hamburger">
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
       </div>
     </div>
-    <div class="landing-section">
-      <div class="container">
-        <div class="navigation">
-          <div class="navigation-links">
-            <a href="./company.html">COMPANY</a>
-            <a href="./talent.html">TALENT</a>
-            <a href="./employers.html">EMPLOYERS</a>
-          </div>
-          <a href="./index.html">
-            <img
-              class="altus-logo"
-              src="./assets/images/shared/Altus-Logo-2020-WHITE-01.png"
-              alt="Altus Logo"
-              loading="lazy"
-            />
-          </a>
-        </div>
-        <div class="main-view">
-          <div class="side-text">
-            <h1>
-              <p class="heading-first">REACH THE</p>
-              <p class="heading-keyword">NEXT LEVEL</p>
-              <p class="heading-space oblique">
-                OF YOUR <span class="bold">CAREER</span>
-              </p>
-            </h1>
-            <button class="gradient-btn">SIGN UP</button>
-          </div>
-        </div>
-        <div class="section-footer"></div>
-      </div>
-      <img
-        class="blocks"
-        src="./assets/images/talent/Talent-Graphic-Blocks-Only.png"
-        alt="Tall blocks with ladders on them reaching into the clouds"
-      />
-      <span class="cloud cloud-first"></span>
-      <span class="cloud cloud-second"></span>
-      <span class="cloud cloud-third"></span>
-      <span class="cloud cloud-fourth"></span>
-      <div class="transition-arrow">
-        <h1>TRANSITION</h1>
-        <img
-          class="arrow"
-          src="./assets/images/talent/Transition-Arrow.png"
-          alt=""
-        />
-      </div>
+    <div class="menu container">
+      <a href="./talent.html">Talent</a>
+      <a href="./employers.html">Employers</a>
+      <a href="./company.html">Company</a>
+      <a href="./company.html#leadership-section">Team</a>
     </div>
-    <div class="footer">
-      <div class="footer-top">
-        <img
-          class="footer-logo"
-          src="assets/images/shared/Altus-Logo-2020-WHITE-01.png"
-          alt="Altus Logo"
-        />
-        <div class="footer-links">
+  </div>
+  <div class="landing-section">
+    <div class="container">
+      <div class="navigation">
+        <div class="navigation-links">
+          <a href="./company.html">COMPANY</a>
           <a href="./talent.html">TALENT</a>
           <a href="./employers.html">EMPLOYERS</a>
-          <a href="./company.html">COMPANY</a>
+        </div>
+        <a href="./index.html">
+          <img class="altus-logo" src="./assets/images/shared/Altus-Logo-2020-WHITE-01.png" alt="Altus Logo"
+            loading="lazy" />
+        </a>
+      </div>
+      <div class="main-view">
+        <div class="side-text">
+          <h1>
+            <p class="heading-first">REACH THE</p>
+            <p class="heading-keyword">NEXT LEVEL</p>
+            <p class="heading-space oblique">
+              OF YOUR <span class="bold">CAREER</span>
+            </p>
+          </h1>
+          <button class="gradient-btn">SIGN UP</button>
         </div>
       </div>
-      <div class="footer-bottom">
-        <div class="social-links">
-          <a target="_blank" href="https://www.linkedin.com/company/altus-jobs">
-            <img
-              src="./assets/images/shared/Linked-In-Icon.png"
-              alt="LinkedIn logo"
-            />
-          </a>
-          <a
-            target="_blank"
-            href="https://www.facebook.com/Altus-Jobs-LLC-112499672171936/"
-          >
-            <img src="./assets/images/shared/FB-Logo.png" alt="Facebook logo" />
-          </a>
-          <a target="_blank" href="https://twitter.com/altusjobs">
-            <img
-              src="./assets/images/shared/Twitter-Icon.png"
-              alt="Twitter logo"
-            />
-          </a>
-          <a target="_blank" href="https://www.instagram.com/altusglobal/">
-            <img
-              src="./assets/images/shared/Insta-Icon.png"
-              alt="Instagram logo"
-            />
-          </a>
-        </div>
+      <div class="section-footer"></div>
+    </div>
+    <img class="blocks" src="./assets/images/talent/Talent-Graphic-Blocks-Only.png"
+      alt="Tall blocks with ladders on them reaching into the clouds" />
+    <span class="cloud cloud-first"></span>
+    <span class="cloud cloud-second"></span>
+    <span class="cloud cloud-third"></span>
+    <span class="cloud cloud-fourth"></span>
+    <div class="transition-arrow">
+      <h1>TRANSITION</h1>
+      <img class="arrow" src="./assets/images/talent/Transition-Arrow.png" alt="" />
+    </div>
+  </div>
+  <div class="footer">
+    <div class="footer-top">
+      <img class="footer-logo" src="assets/images/shared/Altus-Logo-2020-WHITE-01.png" alt="Altus Logo" />
+      <div class="footer-links">
+        <a href="./talent.html">TALENT</a>
+        <a href="./employers.html">EMPLOYERS</a>
+        <a href="./company.html">COMPANY</a>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="social-links">
+        <a target="_blank" href="https://www.linkedin.com/company/altus-jobs">
+          <img src="./assets/images/shared/Linked-In-Icon.png" alt="LinkedIn logo" />
+        </a>
+        <a target="_blank" href="https://www.facebook.com/Altus-Jobs-LLC-112499672171936/">
+          <img src="./assets/images/shared/FB-Logo.png" alt="Facebook logo" />
+        </a>
+        <a target="_blank" href="https://twitter.com/altusjobs">
+          <img src="./assets/images/shared/Twitter-Icon.png" alt="Twitter logo" />
+        </a>
+        <a target="_blank" href="https://www.instagram.com/altusglobal/">
+          <img src="./assets/images/shared/Insta-Icon.png" alt="Instagram logo" />
+        </a>
+      </div>
 
-        <p class="footer-copyright">
-          2020 Altus, LLC.&trade; All Rights Reserved
-        </p>
+      <p class="footer-copyright">
+        2020 Altus, LLC.&trade; All Rights Reserved
+      </p>
+    </div>
+    <span class="footer-bg-img1"></span>
+    <span class="footer-bg-img2"></span>
+  </div>
+  <div class="modal hidden">
+    <h2>REQUEST INFORMATION</h2>
+    <hr />
+    <form id="sign-up-form" class="information-form" action="" method="POST">
+      <div class="company-input-wrapper">
+        <label for="company">COMPANY</label>
+        <input id="company" name="company" type="text" required />
       </div>
-      <span class="footer-bg-img1"></span>
-      <span class="footer-bg-img2"></span>
-    </div>
-    <div class="modal hidden">
-      <h2>REQUEST INFORMATION</h2>
-      <hr />
-      <form id="sign-up-form" class="information-form" action="" method="POST">
-        <div class="company-input-wrapper">
-          <label for="company">COMPANY</label>
-          <input id="company" name="company" type="text" required />
-        </div>
-        <div class="city-input-wrapper">
-          <label for="city">CITY</label>
-          <input id="city" name="city" type="text" required />
-        </div>
-        <div class="state-input-wrapper">
-          <label for="state">STATE</label>
-          <select id="state" name="state" required>
-            <option selected disabled value="">Select State</option>
-            <option value="Alabama">Alabama</option>
-            <option value="Alaska">Alaska</option>
-            <option value="Arizona">Arizona</option>
-            <option value="Arkansas">Arkansas</option>
-            <option value="California">California</option>
-            <option value="Colorado">Colorado</option>
-            <option value="Connecticut">Connecticut</option>
-            <option value="Delaware">Delaware</option>
-            <option value="Florida">Florida</option>
-            <option value="Georgia">Georgia</option>
-            <option value="Hawaii">Hawaii</option>
-            <option value="Idaho">Idaho</option>
-            <option value="Illinois">Illinois</option>
-            <option value="Indiana">Indiana</option>
-            <option value="Iowa">Iowa</option>
-            <option value="Kansas">Kansas</option>
-            <option value="Kentucky">Kentucky</option>
-            <option value="Louisiana">Louisiana</option>
-            <option value="Maine">Maine</option>
-            <option value="Maryland">Maryland</option>
-            <option value="Massachusetts">Massachusetts</option>
-            <option value="Michigan">Michigan</option>
-            <option value="Minnesota">Minnesota</option>
-            <option value="Mississippi">Mississippi</option>
-            <option value="Missouri">Missouri</option>
-            <option value="Montana">Montana</option>
-            <option value="Nebraska">Nebraska</option>
-            <option value="Nevada">Nevada</option>
-            <option value="New Hampshire">New Hampshire</option>
-            <option value="New Jersey">New Jersey</option>
-            <option value="New Mexico">New Mexico</option>
-            <option value="New York">New York</option>
-            <option value="North Carolina">North Carolina</option>
-            <option value="North Dakota">North Dakota</option>
-            <option value="Ohio">Ohio</option>
-            <option value="Oklahoma">Oklahoma</option>
-            <option value="Oregon">Oregon</option>
-            <option value="Pennsylvania">Pennsylvania</option>
-            <option value="Rhode Island">Rhode Island</option>
-            <option value="South Carolina"> South Carolina</option>
-            <option value="South Dakota"> South Dakota</option>
-            <option value="Tennessee">Tennessee</option>
-            <option value="Texas">Texas</option>
-            <option value="Utah">Utah</option>
-            <option value="Vermont">Vermont</option>
-            <option value="Virginia">Virginia</option>
-            <option value="Washington">Washington</option>
-            <option value="West Virginia">West Virginia</option>
-            <option value="Wisconsin">Wisconsin</option>
-            <option value="Wyoming">Wyoming</option>
-          </select>
-        </div>
-        <div class="fname-input-wrapper">
-          <label for="fname">FIRST NAME</label>
-          <input id="fname" name="fname" type="text" required />
-        </div>
-        <div class="lname-input-wrapper">
-          <label for="lname">LAST NAME</label>
-          <input id="lname" name="lname" type="text" required />
-        </div>
-        <div class="email-input-wrapper">
-          <label for="email">EMAIL</label>
-          <input id="email" name="email" type="email" required />
-        </div>
-        <div class="title-input-wrapper">
-          <label for="title">TITLE</label>
-          <input id="title" name="title" type="text" required />
-        </div>
-        <input class="submit-btn" type="submit" value="SUBMIT" />
-      </form>
-    </div>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
-    <script src="./assets/js/main.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js?render=6LcpB-IUAAAAAEpymRWuTGs_DO7PIsegE-Bv-u2k"></script>
-    <script src="./assets/js/form.js"></script>
-  </body>
+      <div class="city-input-wrapper">
+        <label for="city">CITY</label>
+        <input id="city" name="city" type="text" required />
+      </div>
+      <div class="state-input-wrapper">
+        <label for="state">STATE</label>
+        <select id="state" name="state" required>
+          <option selected disabled value="">Select State</option>
+          <option value="Alabama">Alabama</option>
+          <option value="Alaska">Alaska</option>
+          <option value="Arizona">Arizona</option>
+          <option value="Arkansas">Arkansas</option>
+          <option value="California">California</option>
+          <option value="Colorado">Colorado</option>
+          <option value="Connecticut">Connecticut</option>
+          <option value="Delaware">Delaware</option>
+          <option value="Florida">Florida</option>
+          <option value="Georgia">Georgia</option>
+          <option value="Hawaii">Hawaii</option>
+          <option value="Idaho">Idaho</option>
+          <option value="Illinois">Illinois</option>
+          <option value="Indiana">Indiana</option>
+          <option value="Iowa">Iowa</option>
+          <option value="Kansas">Kansas</option>
+          <option value="Kentucky">Kentucky</option>
+          <option value="Louisiana">Louisiana</option>
+          <option value="Maine">Maine</option>
+          <option value="Maryland">Maryland</option>
+          <option value="Massachusetts">Massachusetts</option>
+          <option value="Michigan">Michigan</option>
+          <option value="Minnesota">Minnesota</option>
+          <option value="Mississippi">Mississippi</option>
+          <option value="Missouri">Missouri</option>
+          <option value="Montana">Montana</option>
+          <option value="Nebraska">Nebraska</option>
+          <option value="Nevada">Nevada</option>
+          <option value="New Hampshire">New Hampshire</option>
+          <option value="New Jersey">New Jersey</option>
+          <option value="New Mexico">New Mexico</option>
+          <option value="New York">New York</option>
+          <option value="North Carolina">North Carolina</option>
+          <option value="North Dakota">North Dakota</option>
+          <option value="Ohio">Ohio</option>
+          <option value="Oklahoma">Oklahoma</option>
+          <option value="Oregon">Oregon</option>
+          <option value="Pennsylvania">Pennsylvania</option>
+          <option value="Rhode Island">Rhode Island</option>
+          <option value="South Carolina"> South Carolina</option>
+          <option value="South Dakota"> South Dakota</option>
+          <option value="Tennessee">Tennessee</option>
+          <option value="Texas">Texas</option>
+          <option value="Utah">Utah</option>
+          <option value="Vermont">Vermont</option>
+          <option value="Virginia">Virginia</option>
+          <option value="Washington">Washington</option>
+          <option value="West Virginia">West Virginia</option>
+          <option value="Wisconsin">Wisconsin</option>
+          <option value="Wyoming">Wyoming</option>
+        </select>
+      </div>
+      <div class="fname-input-wrapper">
+        <label for="fname">FIRST NAME</label>
+        <input id="fname" name="fname" type="text" required />
+      </div>
+      <div class="lname-input-wrapper">
+        <label for="lname">LAST NAME</label>
+        <input id="lname" name="lname" type="text" required />
+      </div>
+      <div class="email-input-wrapper">
+        <label for="email">EMAIL</label>
+        <input id="email" name="email" type="email" required />
+      </div>
+      <div class="title-input-wrapper">
+        <label for="title">TITLE</label>
+        <input id="title" name="title" type="text" required />
+      </div>
+      <input class="submit-btn" type="submit" value="SUBMIT" />
+    </form>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="./assets/js/main.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6LcpB-IUAAAAAEpymRWuTGs_DO7PIsegE-Bv-u2k"></script>
+  <script src="./assets/js/form.js"></script>
+</body>
+
 </html>
