--- a/company.html
+++ b/company.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Altus Jobs</title>
+  <link rel="shortcut icon" href="./assets/images/shared/Altus-Favicon.png" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="./assets/css/company.css" />
 </head>
