--- a/index.html
+++ b/index.html
@@ -1,155 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
-    <title>Altus Jobs</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/landing.css" />
-  </head>
-  <body>
-    <div class="navigation-mobile container closed">
-      <a href="./index.html">
-        <img
-          class="altus-logo-small"
-          src="./assets/images/shared/Altus-Grey-Work-Logo.png"
-          alt="Altus"
-        />
-      </a>
-      <div class="menu-btn">
-        <h1>MENU</h1>
-        <div class="hamburger">
-          <div class="hamburger-line"></div>
-          <div class="hamburger-line"></div>
-          <div class="hamburger-line"></div>
-        </div>
-      </div>
-      <div class="menu container">
-        <a href="./talent.html">Talent</a>
-        <a href="./employers.html">Employers</a>
-        <a href="./company.html">Company</a>
-        <a href="./company.html#leadership-section">Team</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
+  <title>Altus Jobs</title>
+  <link rel="shortcut icon" href="./assets/images/shared/Altus-Favicon.png" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/landing.css" />
+</head>
+
+<body>
+  <div class="navigation-mobile container closed">
+    <a href="./index.html">
+      <img class="altus-logo-small" src="./assets/images/shared/Altus-Grey-Work-Logo.png" alt="Altus" />
+    </a>
+    <div class="menu-btn">
+      <h1>MENU</h1>
+      <div class="hamburger">
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
+        <div class="hamburger-line"></div>
       </div>
     </div>
-    <div class="landing-section">
-      <div class="container">
-        <div class="navigation">
-          <div class="navigation-links">
-            <a href="./company.html">COMPANY</a>
-            <a href="./talent.html">TALENT</a>
-            <a href="./employers.html">EMPLOYERS</a>
-          </div>
-          <a href="./index.html">
-            <img
-              class="altus-logo"
-              src="./assets/images/shared/Altus-Logo-2020-WHITE-01.png"
-              alt="Altus Logo"
-              loading="lazy"
-            />
-          </a>
-        </div>
-        <div class="main-view">
-          <div class="side-text">
-            <h1 class="oblique">
-              <p class="heading-first">WHAT DOES CAREER</p>
-              <p class="heading-keyword">ADVANCEMENT</p>
-              <p class="heading-space">MEAN TO YOU?</p>
-            </h1>
-          </div>
-          <img
-            class="main-image"
-            src="./assets/images/landing/Main-Graphic-Full-72-DPI-No-Weirdness.png"
-            alt="Magnifying glass with clouds and a graph"
-            loading="lazy"
-          />
-        </div>
-        <div class="section-footer">
-          <div class="container">
-            <div class="section-footer-heading">
-              <h1>MATCH</h1>
-              <img
-                src="./assets/images/shared/Match-Icon-Only.png"
-                alt=""
-                loading="lazy"
-              />
-            </div>
-            <div class="section-footer-heading">
-              <h1>NETWORK</h1>
-              <img
-                src="./assets/images/shared/Network-Icon-Only.png"
-                alt=""
-                loading="lazy"
-              />
-            </div>
-            <div class="section-footer-heading">
-              <h1>TRANSITION</h1>
-              <img
-                src="./assets/images/shared/Transition-Icon-Only.png"
-                alt=""
-                loading="lazy"
-              />
-            </div>
-          </div>
-        </div>
-      </div>
-      <span class="bg-img1"></span>
-      <span class="bg-img2"></span>
-      <span class="bg-img3"></span>
+    <div class="menu container">
+      <a href="./talent.html">Talent</a>
+      <a href="./employers.html">Employers</a>
+      <a href="./company.html">Company</a>
+      <a href="./company.html#leadership-section">Team</a>
     </div>
-    <div class="footer">
-      <div class="footer-top">
-        <img
-          class="footer-logo"
-          src="assets/images/shared/Altus-Logo-2020-WHITE-01.png"
-          alt="Altus Logo"
-        />
-        <div class="footer-links">
+  </div>
+  <div class="landing-section">
+    <div class="container">
+      <div class="navigation">
+        <div class="navigation-links">
+          <a href="./company.html">COMPANY</a>
           <a href="./talent.html">TALENT</a>
           <a href="./employers.html">EMPLOYERS</a>
-          <a href="./company.html">COMPANY</a>
+        </div>
+        <a href="./index.html">
+          <img class="altus-logo" src="./assets/images/shared/Altus-Logo-2020-WHITE-01.png" alt="Altus Logo"
+            loading="lazy" />
+        </a>
+      </div>
+      <div class="main-view">
+        <div class="side-text">
+          <h1 class="oblique">
+            <p class="heading-first">WHAT DOES CAREER</p>
+            <p class="heading-keyword">ADVANCEMENT</p>
+            <p class="heading-space">MEAN TO YOU?</p>
+          </h1>
+        </div>
+        <img class="main-image" src="./assets/images/landing/Main-Graphic-Full-72-DPI-No-Weirdness.png"
+          alt="Magnifying glass with clouds and a graph" loading="lazy" />
+      </div>
+      <div class="section-footer">
+        <div class="container">
+          <div class="section-footer-heading">
+            <h1>MATCH</h1>
+            <img src="./assets/images/shared/Match-Icon-Only.png" alt="" loading="lazy" />
+          </div>
+          <div class="section-footer-heading">
+            <h1>NETWORK</h1>
+            <img src="./assets/images/shared/Network-Icon-Only.png" alt="" loading="lazy" />
+          </div>
+          <div class="section-footer-heading">
+            <h1>TRANSITION</h1>
+            <img src="./assets/images/shared/Transition-Icon-Only.png" alt="" loading="lazy" />
+          </div>
         </div>
       </div>
-      <div class="footer-bottom">
-        <div class="social-links">
-          <a target="_blank" href="https://www.linkedin.com/company/altus-jobs">
-            <img
-              src="./assets/images/shared/Linked-In-Icon.png"
-              alt="LinkedIn logo"
-            />
-          </a>
-          <a
-            target="_blank"
-            href="https://www.facebook.com/Altus-Jobs-LLC-112499672171936/"
-          >
-            <img src="./assets/images/shared/FB-Logo.png" alt="Facebook logo" />
-          </a>
-          <a target="_blank" href="https://twitter.com/altusjobs">
-            <img
-              src="./assets/images/shared/Twitter-Icon.png"
-              alt="Twitter logo"
-            />
-          </a>
-          <a target="_blank" href="https://www.instagram.com/altusglobal/">
-            <img
-              src="./assets/images/shared/Insta-Icon.png"
-              alt="Instagram logo"
-            />
-          </a>
-        </div>
-
-        <p class="footer-copyright">
-          2020 Altus, LLC.&trade; All Rights Reserved
-        </p>
-      </div>
-      <span class="footer-bg-img1"></span>
-      <span class="footer-bg-img2"></span>
     </div>
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
-    <script src="./assets/js/main.js"></script>
-  </body>
+    <span class="bg-img1"></span>
+    <span class="bg-img2"></span>
+    <span class="bg-img3"></span>
+  </div>
+  <div class="footer">
+    <div class="footer-top">
+      <img class="footer-logo" src="assets/images/shared/Altus-Logo-2020-WHITE-01.png" alt="Altus Logo" />
+      <div class="footer-links">
+        <a href="./talent.html">TALENT</a>
+        <a href="./employers.html">EMPLOYERS</a>
+        <a href="./company.html">COMPANY</a>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="social-links">
+        <a target="_blank" href="https://www.linkedin.com/company/altus-jobs">
+          <img src="./assets/images/shared/Linked-In-Icon.png" alt="LinkedIn logo" />
+        </a>
+        <a target="_blank" href="https://www.facebook.com/Altus-Jobs-LLC-112499672171936/">
+          <img src="./assets/images/shared/FB-Logo.png" alt="Facebook logo" />
+        </a>
+        <a target="_blank" href="https://twitter.com/altusjobs">
+          <img src="./assets/images/shared/Twitter-Icon.png" alt="Twitter logo" />
+        </a>
+        <a target="_blank" href="https://www.instagram.com/altusglobal/">
+          <img src="./assets/images/shared/Insta-Icon.png" alt="Instagram logo" />
+        </a>
+      </div>
+
+      <p class="footer-copyright">
+        2020 Altus, LLC.&trade; All Rights Reserved
+      </p>
+    </div>
+    <span class="footer-bg-img1"></span>
+    <span class="footer-bg-img2"></span>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="./assets/js/main.js"></script>
+</body>
+
 </html>
