Adjusted font imports in css to hopefully improve load time, also added preload in html to load fonts early if possible

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta http-equiv="ScreenOrientation" content="autoRotate:disabled" />
   <title>Altus Jobs</title>
   <link rel="shortcut icon" href="./assets/images/shared/Altus-Favicon.png" />
+  <link rel="preload" as="font" href="./assets/fonts/FuturaPT/FuturaPTBook.otf" type="font/otf" crossorigin="anonymous">
+  <link rel="preload" as="font" href="./assets/fonts/FuturaPT/FuturaPTBookOblique.otf" type="font/otf"
+    crossorigin="anonymous">
+  <link rel="preload" as="font" href="./assets/fonts/FuturaPT/FuturaPTDemi.otf" type="font/otf" crossorigin="anonymous">
+  <link rel="preload" as="font" href="./assets/fonts/FuturaPT/FuturaPTDemiOblique.otf" type="font/otf"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="./assets/css/landing.css" />
 </head>
