--- a/talent.html
+++ b/talent.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Altus Jobs</title>
   <link rel="shortcut icon" href="./assets/images/shared/Altus-Favicon.png" />
+  <link rel="preload" as="font" href="./assets/fonts/FuturaPT/FuturaPTBook.otf" type="font/otf" crossorigin="anonymous">
+  <link rel="preload" as="font" href="./assets/fonts/FuturaPT/FuturaPTBookOblique.otf" type="font/otf"
+    crossorigin="anonymous">
+  <link rel="preload" as="font" href="./assets/fonts/FuturaPT/FuturaPTDemi.otf" type="font/otf" crossorigin="anonymous">
+  <link rel="preload" as="font" href="./assets/fonts/FuturaPT/FuturaPTDemiOblique.otf" type="font/otf"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="./assets/css/talent.css" />
 </head>
