Fixed section footer on company page caused by height fix on other pages

--- a/company.html
+++ b/company.html
@@ -82,7 +82,7 @@
           </div>
           <div class="section-footer-middle">
             <p>QUESTIONS?</p>
-            <a href="mailto:jobs@altusjobs.com">JOBS@ALTUSJOBS.COM</a>
+            <a href="mailto:contact@altusjobs.com">CONTACT@ALTUSJOBS.COM</a>
           </div>
           <div class="section-footer-heading">
             <img class="location-image location-second" src="./assets/images/company/Orlando-Icon.png" />
